[package]
name = "uniswapx-client-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"


[dependencies]
tracing = "0.1"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls", "json"
] }
serde = {  version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_url_params = "0.2"
derive_builder = "0.20"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
alloy-primitives = { version = "0.8", features = ["serde"] }